revert changes & fix cfg issue